--- a/profil.css
+++ b/profil.css
@@ -522,7 +522,7 @@ footer{
 
 /**Mobile Responsive*/
 
-@media (min-width:300px) and (max-width:700px ){
+@media (max-width:400px ){
 
     
     #home  .header-content img{
